WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212948
[WebDriver][WPE] Follow up WPE fix after
r262703
https://bugs.webkit.org/show_bug.cgi?id=212948
Summary
[WebDriver][WPE] Follow up WPE fix after r262703
Lauro Moura
Reported
2020-06-08 19:23:50 PDT
WPE is checking the native shift flag twice instead of the alt one.
Attachments
Patch
(1.53 KB, patch)
2020-06-08 19:26 PDT
,
Lauro Moura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2020-06-08 19:26:14 PDT
Created
attachment 401411
[details]
Patch
EWS
Comment 2
2020-06-09 00:06:59 PDT
Committed
r262779
: <
https://trac.webkit.org/changeset/262779
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401411
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-06-09 00:07:19 PDT
<
rdar://problem/64152721
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug