[WebDriver][WPE] Follow up WPE fix after r262703 https://bugs.webkit.org/show_bug.cgi?id=212948

Reviewed by Carlos Garcia Campos.

Covered by existing tests.

* UIProcess/Automation/wpe/WebAutomationSessionWPE.cpp:
(WebKit::WebAutomationSession::platformWebModifiersFromRaw):


Canonical link: https://commits.webkit.org/225757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262779 268f45cc-cd09-0410-ab3c-d52691b4dbfc